:bug: possible fix for drawings overview scroll on tablet safari

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2004,10 +2004,6 @@ button {
       &:first-child {
         margin-top: 0;
       }
-
-      &:last-child {
-        margin-bottom: 0;
-      }
     }
 
     .footer {
@@ -2028,6 +2024,7 @@ button {
 
     .selectedDrawing {
       position: absolute;
+      display: block;
       width: 100%;
       height: 100%;
       background: url(/assets/icons/check.svg) no-repeat;
